Fix dark mode and Bug Responsive

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body.dark-mode {
     color: white;
 }
 
-body.dark-mode .skills {
+body.dark-mode #skills {
     background-color: #1e1e1e;
     color: white;
 }
@@ -337,7 +337,7 @@ html {
 }
 
 @media (max-width: 768px) {
-    .profile {
+    #profile {
         flex-direction: column;
         align-items: center;
     }
